--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "webpack",
     "start": "webpack serve --open",
-    "test": "jest --watch"
+    "test": "jest --watch",
+    "watch": "webpack --watch"
   },
   "author": "",
   "license": "ISC",
